--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "express-boilerplate",
+  "name": "kidslearn-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
-    "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
@@ -14,16 +16,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.2.2",
+    "treeize": "^2.1.2",
+    "xss": "^1.0.7"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.4",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   }
 }
